cmake_minimum_required(VERSION 3.20)
project(duotai)

set(CMAKE_CXX_STANDARD 14)

add_executable(duotai main.cpp)
add_executable(01 01多态基本概念.cpp)
add_executable(02 02多态案例1计算器类.cpp)
add_executable(03 03纯虚函数和抽象类.cpp)
add_executable(04 04多态案例2制作饮品.cpp)
add_executable(05 05虚析构和纯虚析构.cpp)
add_executable(06 06多态案例3电脑组装.cpp)
