cmake_minimum_required(VERSION 3.20)
project(pointer)

set(CMAKE_CXX_STANDARD 14)

add_executable(pointer main.cpp)
add_executable(01 01指针的基本概念.cpp)
add_executable(02 02指针变量的定义和使用.cpp)
add_executable(03 03指针所占内存空间.cpp)
add_executable(04 04空指针和野指针.cpp)
add_executable(05 05const修饰指针.cpp)
add_executable(06 06指针和数组.cpp)
add_executable(07 07指针和函数.cpp)
add_executable(08 08指针数组函数.cpp)
