cmake_minimum_required(VERSION 3.20)
project(struct)

set(CMAKE_CXX_STANDARD 14)

add_executable(struct main.cpp)
add_executable(01 01结构体基本概念.cpp)
add_executable(02 02结构体定义与使用.cpp)
add_executable(03 03结构体数组.cpp)
add_executable(04 04结构体指针.cpp)
add_executable(05 05结构体嵌套结构体.cpp)
add_executable(06 06结构体做函数参数.cpp)
add_executable(07 07结构体中const使用场景.cpp)
add_executable(08 08结构体案例.cpp)
add_executable(09 09结构体案例2.cpp)

